kubernetes/apps/rook-ceph/overlays/prod/middleware-auth-s3.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-auth-s3
  namespace: rook-ceph
spec:
  plugin:
    s3auth:
      statusCode: 404
      credentials:
        - accessKeyId: urn:k8s:secret:bucket-obsidian:AWS_ACCESS_KEY_ID
          accessSecretKey: urn:k8s:secret:bucket-obsidian:AWS_SECRET_ACCESS_KEY
          region: us-east-1
          service: s3
