kubernetes/apps/rook-ceph/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: ceph-ingress
  namespace: rook-ceph
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int-old
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`ceph.sobrinho.pt`)
      kind: Rule
      services:
        - name: rook-ceph-mgr-dashboard
          port: 8443
          scheme: https
          serversTransport: traefik-transport-insecure@kubernetescrd
  tls:
    secretName: ceph-cert
